Fix problem with invisible carret in FF

--- a/generators/feedback_form/templates/feedback.css
+++ b/generators/feedback_form/templates/feedback.css
@@ -1,6 +1,6 @@
 
 div#feedback {
-  position: absolute;	
+  position: fixed;	
   top: 0;
   left: 0;			
   width: 100%;
